--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -187,18 +187,108 @@
         <div id="constructor" class="tm-content-full">
             <h1 class="uk-text-center">Мощный конструктор картин</h1>
             <div class="tm-constructor-wrap uk-margin-bottom">
-                <div class="uk-grid">
-                    <div class="uk-width-small-1-1 uk-width-medium-4-10">
+                <div class="tm-constructor-top-wrap">
+                    <label class="uk-form-label">Выбор изображения</label>
+                    <div class="uk-grid">
+                        <div class="uk-width-medium-1-2">
+                            <a href="#my-id" class="uk-text-center tm-api" data-uk-modal>Подобрать из каталога</a>
+                        </div>
+                        <div class="uk-width-medium-1-2">
+                            <a href="" class="js-file uk-text-center">Загрузить</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="tm-constructor-inwrap">
+                    <div class="tm-constructor-right uk-text-center uk-flex uk-flex-top uk-flex-space-around">
+                        <!-- <button class="undraw">Del</button>  -->
+                        <div class="canvas">
+                            <div class="canvas-wrap">
+                                <div class="tm-rul-wrap js-ruler-gor uk-grid uk-grid-collapse">
+                                    <div class="tm-ruler rul1"><span>5</span></div>
+                                    <div class="tm-ruler rul2"><span>10</span></div>
+                                    <div class="tm-ruler rul3"><span>15</span></div>
+                                    <div class="tm-ruler rul4"><span>20</span></div>
+                                    <div class="tm-ruler rul5"><span>25</span></div>
+                                    <div class="tm-ruler rul6"><span>30</span></div>
+                                    <div class="tm-ruler rul7"><span>35</span></div>
+                                    <div class="tm-ruler rul8"><span>40</span></div>
+                                    <div class="tm-ruler rul9"><span>45</span></div>
+                                    <div class="tm-ruler rul10"><span>50</span></div>
+                                    <div class="tm-ruler rul11"><span>55</span></div>
+                                    <div class="tm-ruler rul12"><span>60</span></div>
+                                    <div class="tm-ruler rul13"><span>65</span></div>
+                                    <div class="tm-ruler rul14"><span>70</span></div>
+                                    <div class="tm-ruler rul15"><span>75</span></div>
+                                    <div class="tm-ruler rul16"><span>80</span></div>
+                                    <div class="tm-ruler rul17"><span>85</span></div>
+                                    <div class="tm-ruler rul18"><span>90</span></div>
+                                    <div class="tm-ruler rul19"><span>95</span></div>
+                                    <div class="tm-ruler rul20"><span>100</span></div>
+                                </div>
+                                <div class="tm-canv-wrap uk-grid uk-grid-collapse">
+                                    <div class="tm-rulv-wrap js-ruler-ver">
+                                        <div class="tm-ruler rul1"><span>5</span></div>
+                                        <div class="tm-ruler rul2"><span>10</span></div>
+                                        <div class="tm-ruler rul3"><span>15</span></div>
+                                        <div class="tm-ruler rul4"><span>20</span></div>
+                                        <div class="tm-ruler rul5"><span>25</span></div>
+                                        <div class="tm-ruler rul6"><span>30</span></div>
+                                        <div class="tm-ruler rul7"><span>35</span></div>
+                                        <div class="tm-ruler rul8"><span>40</span></div>
+                                        <div class="tm-ruler rul9"><span>45</span></div>
+                                        <div class="tm-ruler rul10"><span>50</span></div>
+                                        <div class="tm-ruler rul11"><span>55</span></div>
+                                        <div class="tm-ruler rul12"><span>60</span></div>
+                                    </div>
+                                    <div id="canvas" style="border: 1px solid grey"></div>
+                                </div>
+                                <div class="tm-canv-bottom">
+                                    <div class="tm-info uk-text-left">
+                                        <i class="uk-icon-info uk-icon-hover"></i>
+                                        <a href="#">Как пользоваться конструктором</a>
+                                    </div>
+                                    <div class="tm-info uk-text-left">
+                                        <i class="uk-icon-exclamation uk-icon-hover"></i>
+                                        <span>Если Вы не можете воспользоваться конструктором, то любую модель картины мы можем сформировать за вас</span><a href="#">Помогите мне</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <img src="images/Canvas1.jpg" alt="canvas"> -->
+                            <i class="tm-canv-icon tm-draw uk-icon-pencil-square-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Добавить элемент"></i>
+                            <i class="tm-canv-icon tm-del uk-icon-close uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Удалить элемент"></i>
+                            <!-- <i class="tm-canv-icon tm-undo uk-icon-mail-reply uk-icon-hover" ></i> 
+                            <i class="tm-canv-icon tm-redo uk-icon-mail-forward uk-icon-hover" ></i>  -->
+                            <i class="tm-canv-icon tm-save uk-icon-save uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Сохранить"></i>
+                            <i class="tm-canv-icon tm-rem uk-icon-trash-o uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Очистить всё"></i>
+                            <i class="tm-canv-icon tm-check uk-icon-check uk-icon-hover" data-uk-tooltip="{animation:'true'}" title="Готово"></i>
+                        </div>
+                    </div>
+                    <div class="tm-constructor-left">
                         <form class="uk-form tm-constructor-form">
                             <div class="uk-grid">
-                                <div class="uk-width-small-1-1 uk-width-medium-1-2">
+                                <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Выбор изображения</label>
                                         <a href="#my-id" class="uk-text-center tm-api" data-uk-modal>Подобрать из каталога</a>
 
                                         <div id="my-id" class="uk-modal tm-modal">
                                             <div class="uk-modal-dialog uk-modal-dialog-large">
-                                                <h4>Выберите картинку</h4>
+                                                <div class="uk-grid">
+                                                    <div class="uk-width-large-1-3">
+                                                        <label class="uk-form-label">Выберите картинку</label>
+                                                    </div>
+                                                    <div class="uk-width-large-1-3">
+                                                        <p>Категория изображения</p>
+                                                        <select name="" id="">
+                                                            <option value="">Абстракция</option>
+                                                            <option value="">Абстракция1</option>
+                                                            <option value="">Абстракция2</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="uk-width-large-1-3">
+                                                        <input type="text" placeholder="Абстрактное искусство">
+                                                    </div>
+                                                </div>
                                                 <div class="uk-overflow-container">
                                                     <div class="uk-grid tm-modal-pics">
                                                         <!-- <div class="uk-width-large-1-4 uk-width-medium-1-3 uk-width-small-1-2 uk-margin-bottom">
@@ -213,7 +303,7 @@
                                         <p class="uk-form-help-block">тут название выбранной картинки.jpg</p>
                                     </div>
                                 </div>
-                                <div class="uk-width-small-1-1 uk-width-medium-1-2">
+                                <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Стоимость:</label>
                                         <div class="tm-constructor-form-price uk-text-center">
@@ -223,7 +313,7 @@
                                 </div>
                             </div>
                             <div class="uk-grid">
-                                <div class="uk-width-small-1-1 uk-width-medium-1-2">
+                                <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
                                         <p class="uk-form-help-block">Или загрузите ваше изображение (jpg, png)</p>
                                         <input type="file" class="uk-hidden" oi-file="options"  id="logo"  accept="image/*,image/jpeg,image/png,image/jpg"> 
@@ -231,7 +321,7 @@
                                          <a href="" class="js-file uk-text-center">Загрузить</a>
                                     </div>
                                 </div>
-                                <div class="uk-width-small-1-1 uk-width-medium-1-2">
+                                <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
                                         <!-- <button onclick="return false;" class="uk-button uk-button-primary">Загрузить</button> -->
                                         <!-- <i class="tm-canv-icon tm-api uk-icon-download uk-icon-hover"></i>  -->
@@ -240,7 +330,7 @@
                             </div>
 
                             <div class="uk-grid">
-                                <div class="uk-width-small-1-1 uk-width-medium-1-2">
+                                <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Размер изображения (см)</label>
                                         <div class="tm-constructor-form-range">
@@ -251,7 +341,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="uk-width-small-1-1 uk-width-medium-1-2">
+                                <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
 
                                     </div>
@@ -259,7 +349,7 @@
                             </div>
 
                             <div class="uk-grid">
-                                <div class="uk-width-small-1-1 uk-width-medium-1-2">
+                                <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
                                         <label class="uk-form-label">Материал</label>
                                         <select class="js-material">
@@ -285,7 +375,7 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="uk-width-small-1-1 uk-width-medium-1-2">
+                                <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <div class="uk-form-row">
                                         <div class="uk-form-row">
                                             <label class="uk-form-label">Виды подрамника</label>
@@ -317,7 +407,7 @@
                             </div>
 
                             <div class="uk-grid">
-                                <div class="uk-width-small-1-1 uk-width-medium-1-2">
+                                <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
                                     <button class="tm-constructor-form-order-btn tm-book uk-text-center">Заказать</button>
                                     <!-- <a href="#see-in" class="uk-button tm-api" data-uk-modal>Посмотреть в интерьере</a> -->
                                 </div>
@@ -325,71 +415,7 @@
 
                         </form>
                     </div>
-                    <div class="uk-width-small-1-1 uk-width-medium-6-10 uk-text-center uk-flex uk-flex-middle uk-flex-space-around">
-                        <!-- <button class="undraw">Del</button>  -->
-                        <div class="canvas">
-                            <div class="canvas-wrap">
-                                <div class="tm-rul-wrap js-ruler-gor uk-grid uk-grid-collapse">
-                                    <div class="tm-ruler rul1"><span>0</span></div>
-                                    <div class="tm-ruler rul1"><span>5</span></div>
-                                    <div class="tm-ruler rul2"><span>10</span></div>
-                                    <div class="tm-ruler rul3"><span>15</span></div>
-                                    <div class="tm-ruler rul4"><span>20</span></div>
-                                    <div class="tm-ruler rul5"><span>25</span></div>
-                                    <div class="tm-ruler rul6"><span>30</span></div>
-                                    <div class="tm-ruler rul7"><span>35</span></div>
-                                    <div class="tm-ruler rul8"><span>40</span></div>
-                                    <div class="tm-ruler rul9"><span>45</span></div>
-                                    <div class="tm-ruler rul10"><span>50</span></div>
-                                    <div class="tm-ruler rul11"><span>55</span></div>
-                                    <div class="tm-ruler rul12"><span>60</span></div>
-                                    <div class="tm-ruler rul13"><span>65</span></div>
-                                    <div class="tm-ruler rul14"><span>70</span></div>
-                                    <div class="tm-ruler rul15"><span>75</span></div>
-                                    <div class="tm-ruler rul16"><span>80</span></div>
-                                    <div class="tm-ruler rul17"><span>85</span></div>
-                                    <div class="tm-ruler rul18"><span>90</span></div>
-                                    <div class="tm-ruler rul19"><span>95</span></div>
-                                    <div class="tm-ruler rul20"><span>100</span></div>
-                                </div>
-                                <div class="tm-canv-wrap uk-grid uk-grid-collapse">
-                                    <div class="tm-rulv-wrap js-ruler-ver">
-                                        <div class="tm-ruler rul1"><span>0</span></div>
-                                        <div class="tm-ruler rul1"><span>5</span></div>
-                                        <div class="tm-ruler rul2"><span>10</span></div>
-                                        <div class="tm-ruler rul3"><span>15</span></div>
-                                        <div class="tm-ruler rul4"><span>20</span></div>
-                                        <div class="tm-ruler rul5"><span>25</span></div>
-                                        <div class="tm-ruler rul6"><span>30</span></div>
-                                        <div class="tm-ruler rul7"><span>35</span></div>
-                                        <div class="tm-ruler rul8"><span>40</span></div>
-                                        <div class="tm-ruler rul9"><span>45</span></div>
-                                        <div class="tm-ruler rul10"><span>50</span></div>
-                                        <div class="tm-ruler rul10"><span>55</span></div>
-                                    </div>
-                                    <div id="canvas" style="border: 1px solid grey"></div>
-                                </div>
-                                <div class="tm-canv-bottom">
-                                    <div class="tm-info uk-text-left">
-                                        <i class="uk-icon-info uk-icon-hover"></i>
-                                        <a href="#">Как пользоваться конструктором</a>
-                                    </div>
-                                    <div class="tm-info uk-text-left">
-                                        <i class="uk-icon-exclamation uk-icon-hover"></i>
-                                        <span>Если Вы не можете воспользоваться конструктором, то любую модель картины мы можем сформировать за вас</span><a href="#">Помогите мне</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- <img src="images/Canvas1.jpg" alt="canvas"> -->
-                            <i class="tm-canv-icon tm-draw uk-icon-pencil-square-o uk-icon-hover"></i>
-                            <i class="tm-canv-icon tm-del uk-icon-close uk-icon-hover"></i>
-                            <i class="tm-canv-icon tm-undo uk-icon-mail-reply uk-icon-hover"></i> 
-                            <i class="tm-canv-icon tm-redo uk-icon-mail-forward uk-icon-hover"></i> 
-                            <i class="tm-canv-icon tm-save uk-icon-save uk-icon-hover"></i>
-                            <i class="tm-canv-icon tm-rem uk-icon-trash-o uk-icon-hover"></i>
-                            <i class="tm-canv-icon tm-check uk-icon-check uk-icon-hover"></i>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
 
