--- a/uikit-2.27.4/index2.html
+++ b/uikit-2.27.4/index2.html
@@ -32,8 +32,63 @@
 </head>
 <body>
     <div class="tm-global-wrap uk-grid">
-        <aside class="tm-global-wrap-left uk-width-1-3">aside2</aside>
-        <div class="tm-global-wrap-right uk-width-2-3">
+            <!-- aside start-->
+        <aside class="tm-global-wrap-left uk-width-large-1-3 uk-width-medium-1-3 uk-hidden-small">
+            <!-- as1 start-->
+            <div class="tm-as1-wrap">
+                <div class="tm-as1-block">
+                    <ul>
+                        <li><a class="uk-text-middle" href="#">Пункт меню NO1</a></li>
+                        <li class="active"><a class="uk-text-middle" href="#">Пункт меню NO2</a></li>
+                        <li><a class="uk-text-middle" href="#">Пункт меню NO3</a></li>
+                        <li><a class="uk-text-middle" href="#">Пункт меню NO4</a></li>
+                        <li><a class="uk-text-middle" href="#">Пункт меню NO5</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- as1 end-->
+            <!-- as2 start-->
+            <div class="tm-as2-wrap">
+                <div class="tm-as2-block">
+                    <h3 class="tm-as2-header">Посмотрите это</h3>
+                    <div class="tm-as2-video">
+                        <div class="tm-as2-v"><img src="images/vidblk/vid1.jpg" alt="vid1"></div>
+                        <div class="tm-as2-v"><img src="images/vidblk/vid2.jpg" alt="vid2"></div>
+                        <div class="tm-as2-v"><img src="images/vidblk/vid3.jpg" alt="vid3"></div>
+                    </div>
+                    <div class="tm-as2-link uk-text-right"><a href="#">смотреть другие видео</a></div>
+                </div>
+            </div>
+            <!-- as2 end-->
+            <!-- as3 start-->
+            <div class="tm-as3">
+                <h3 class="tm-as3-header">Полезные статьи</h3>
+                <div class="tm-as3-wrap">
+                    <div class="tm-as3-block">
+                        <ul>
+                            <li>
+                                <a class=" head uk-text-middle" href="#">Пункт меню NO1</a>
+                                <div class="tm-as3-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eveniet quaerat nemo ex officia deleniti in reiciendis, dignissimos blanditiis architecto, inventore impedit. Voluptates!
+                                    <div class="tm-as3-more uk-text-right"><a href="#">Подробнее</a></div>
+                                </div>
+                            </li>
+                            <li>
+                                <a class=" head uk-text-middle" href="#">Пункт меню NO2</a>
+                                <div class="tm-as3-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae eveniet quaerat nemo ex officia deleniti in reiciendis, dignissimos blanditiis architecto, inventore impedit. Voluptates!
+                                    <div class="tm-as3-more uk-text-right"><a href="#">Подробнее</a></div>
+                                </div>
+                            </li>
+                        </ul>
+                        <div class="tm-as3-more-art uk-text-center"><a href="#">больше статей</a></div>
+                    </div>
+                </div>
+            </div>
+            <!-- as3 end-->
+        </aside>
+            <!-- aside end-->
+        <div class="tm-global-wrap-right uk-width-large-2-3 uk-width-medium-2-3 uk-width-small-1-1">
             <!-- sec1 start-->
             <section> 
                 <div class="tm-sec1-wrap">
@@ -79,18 +134,77 @@
                     <h2 class="tm-sec3-header">Примеры работ</h2>
                     <div class="tm-sec3-tpls-wrap">
                         <div class="uk-grid">
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom"><img src="images/page2/gal1.jpg" alt="pic1"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom"><img src="images/page2/gal2.jpg" alt="pic2"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom"><img src="images/page2/gal3.jpg" alt="pic3"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom"><img src="images/page2/gal4.jpg" alt="pic4"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom"><img src="images/page2/gal5.jpg" alt="pic5"></div>
-                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom"><img src="images/page2/gal6.jpg" alt="pic6"></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal1.jpg" alt="pic1"></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal2.jpg" alt="pic2"></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal3.jpg" alt="pic3"></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal4.jpg" alt="pic4"></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal5.jpg" alt="pic5"></div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-text-center uk-margin-bottom"><img src="images/page2/gal6.jpg" alt="pic6"></div>
                         </div>
                         <div class="tm-sec3-more"><a href="#">Больше фотографий</a></div>
                     </div>
                 </div>
             </section>
             <!-- sec3 end-->
+            <!-- sec4 start-->
+            <section>
+                <div class="tm-sec4-wrap">
+                    <h2 class="tm-sec4-header">Палитра изделий</h2>
+                    <div class="tm-sec4-tpls-wrap">
+                        <div class="uk-grid">
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p1.png" alt="pic1">
+                                Абстрактные изображения
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p2.png" alt="pic2">
+                                Винтаж
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p3.png" alt="pic3">
+                                Еда и напитки
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p4.png" alt="pic4">
+                                Животные/Дикая природа
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p5.png" alt="pic5">
+                                Здания/Достопримечательности
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p6.png" alt="pic6">
+                                Искусство
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p7.png" alt="pic7">
+                                Парки/Природа
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p8.png" alt="pic8">
+                                Предметы
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p9.png" alt="pic9">
+                                Природа
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p10.png" alt="pic10">
+                                Транспорт
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p11.png" alt="pic11">
+                                Разное
+                            </div>
+                            <div class="uk-width-large-1-3 uk-width-medium-1-2 uk-width-small-1-1 uk-margin-bottom uk-text-middle">
+                                <img src="images/page2/p12.png" alt="pic12">
+                                Спорт/Отдых
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- sec4 end-->
         </div>
     </div>
 </body>
